@@ -5,5 +5,6 @@ if [ "x${ZORROA_STORAGE_PATH}" != "x" ]; then
     JAVA_OPTS="${JAVA_OPTS} -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=${ZORROA_STORAGE_PATH}"
 fi
 
+JAVA_OPTS=`config/jvm_options_parser config/jvm.options`
 echo "Java Opts: ${JAVA_OPTS}"
-java -Xms512m -XX:+UseG1GC -XX:InitiatingHeapOccupancyPercent=60 -XX:MaxRAMPercentage=60 -Xlog:gc $JAVA_OPTS -jar officer.jar -port 7081
+java $JAVA_OPTS -jar officer.jar -port 7081
